## Process this file with automake to produce Makefile.in

SUBDIRS = Half Iex IlmImf Imath

EXTRA_DIST = bootstrap README.win32 README.OSX README.CVS LICENSE openexr.m4 OpenEXR.pc

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = OpenEXR.pc

m4datadir = $(datadir)/aclocal
m4data_DATA = openexr.m4

