
install-data-local:
	$(mkinstalldirs) $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)
	$(INSTALL_DATA)  index.html                   $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/index.html
	$(INSTALL_DATA)  bits.html                    $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/bits.html
	$(INSTALL_DATA)  development-highlev.html     $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/development-highlev.html
	$(INSTALL_DATA)  ksquirrel-libs-about.html    $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/ksquirrel-libs-about.html
	$(INSTALL_DATA)  ksquirrel-libs-fio.html      $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/ksquirrel-libs-fio.html
	$(INSTALL_DATA)  ksquirrel-libs-metainfo.html $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/ksquirrel-libs-metainfo.html
	$(INSTALL_DATA)  ksquirrel-libs-struct.html   $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/ksquirrel-libs-struct.html
	$(INSTALL_DATA)  ksquirrel-libs-olibs.html    $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/ksquirrel-libs-olibs.html
	$(INSTALL_DATA)  ksquirrel-libs-olibs1.html   $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/ksquirrel-libs-olibs1.html
	$(INSTALL_DATA)  ksquirrel-libs-olibs2.html   $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/ksquirrel-libs-olibs2.html
	$(INSTALL_DATA)  ksquirrel-libs-olibs3.html   $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/ksquirrel-libs-olibs3.html
	$(INSTALL_DATA)  simplelib.html               $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/simplelib.html
	$(INSTALL_DATA)  styles.css                   $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/styles.css
	$(INSTALL_DATA)  belka_bkgr.gif               $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/belka_bkgr.gif
	$(INSTALL_DATA)  how_to_build_c.png           $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/how_to_build_c.png
	$(INSTALL_DATA)  how_to_build_c++.png         $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/how_to_build_c++.png
	$(INSTALL_DATA)  how_to_build_codec.png       $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/how_to_build_codec.png
	$(INSTALL_DATA)  how_to_build_arrow.png       $(DESTDIR)/usr/share/doc/ksquirrel-libs-$(PACKAGE_VERSION)/how_to_build_arrow.png
